convert to use require.js

--- a/index.todo.html
+++ b/index.todo.html
@@ -40,12 +40,14 @@
     <a href="http://jgn.me/">J&eacute;r&ocirc;me Gravel-Niquet</a>.
     <br />Rewritten by: <a href="http://addyosmani.github.com/todomvc">TodoMVC</a>.
   </div>
-
+<!--
   <script src="/js/jquery.js"></script>
   <script src="/js/underscore.js"></script>
   <script src="/js/backbone.js"></script>
   <script src="/js/backbone.localStorage.js"></script>
   <script src="/js/todos.js"></script>
+-->
+  <script data-main="/js/main" src="/js/require.min.js"></script>
 
   <!-- Templates -->
 
